Fix deprecated URL constructor in Fenster.java getLinesArrayFromIpesFile()
- Replaced deprecated URL(URL, String) with URI-based approach
- Changed: new URL(GeckoSim.urlApplet, dateiName)
- To: GeckoSim.urlApplet.toURI().resolve(dateiName).toURL()
- URL(URL, String) constructor deprecated since Java 20

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>